--- a/index.html
+++ b/index.html
@@ -32,5 +32,7 @@
     <button id="subtract" onclick="getOperation('-')">-</button>
     <button id="multiply" onclick="getOperation('*')">x</button>
     <button id="divide" onclick="getOperation('/')">/</button>
+    <br>
+    <button id="equals" onclick="calculate()">=</button>
 </body>
 </html>
