operation buttons working, but equal button and decimal numbers still missing. Can calculate with operation buttons alone

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </head>
 <body>
     <p>Display Here:</p>
-    <p id="display">0</p>
+    <div>
+        <p id="previousCalculation"></p>
+        <p id="display">0</p>
+    </div>
     <br>
     <button id="1" onclick="display(1)">1</button>
     <button id="2" onclick="display(2)">2</button>
