equal button is now working. Missing dealing with decimals

--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
     <button id="multiply" onclick="getOperation('*')">x</button>
     <button id="divide" onclick="getOperation('/')">/</button>
     <br>
-    <button id="equals" onclick="calculate()">=</button>
+    <button id="equals" onclick="equalClick()">=</button>
 </body>
 </html>
