--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <button id="multiply" onclick="getOperation('*')">x</button>
             </div>
             <div class="itemBox">
-                <button id="backspace">DEL</button>
+                <button id="backSpace" onclick="backSpace()">DEL</button>
                 <button id="point" onclick="display(101)">.</button>
                 <button id="0" onclick="display(0)">0</button>
                 <button id="divide" onclick="getOperation('/')">/</button>
