missing button hover, and screen vertically wrapping for really long strings

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                     <button id="divide" onclick="getOperation('/')">/</button>
                 </div>
                 <div class="clearEquals">
-                    <button id="clear" onclick="cleared()">CE</button>
-                    <button id="equals" onclick="equalClick()">=</button>
+                    <button id="clear" class="clearEquals" onclick="cleared()">CE</button>
+                    <button id="equals" class="clearEquals" onclick="equalClick()">=</button>
                 </div>
             </div>
         </div>
